# podyulsyot3001

./: .env  .env.example  .gitignore  .graphify_detect.json  .graphify_extract.json  .pre-commit-config.yaml  .wezterm-init.sh  AGENTS.md  CLAUDE.md  GEMINI.md  LEGACY_CSS_AUDIT.md  QA_BACKLOG.md  README.md  README.txt  STANDARDS.md  Sin título.base  adapted_ast.json  add_skills.py  add_third_job.py  agent_entrypoint.md  changelog.md  cv-generator  data  discover_mcp.py  docker-compose.neo4j.yml  environment.yml  extract_symbols.py  gemini.md  langgraph.json  project_ast.json  pyproject.toml  requirements.txt  session-ses_28e6.md  session.txt  textual_web.toml  verify_modes.py
.gemini/: settings.json
.githooks/: pre-commit  pre-push
.obsidian/: workspace.json
.sisyphus/: boulder.json
config/: logging.json
data/: README.md
docs/: AGENT_ENTRYPOINT.md  PROFILE.json  PROFILE.md  README.md  doc-router-design.md  doc-router-phase1-plan.md  unified_automation_gap_analysis.md
future_docs/: expand_context_navigation_skill.md  llm_agent_native_context.md  match_skill_hardening_roadmap.md
graphify-out/: GRAPH_REPORT.md  docs_extract.json  graph.html  graph.json  plan_docs_extract.json
instructions/: context-pill-audit.md  context_compiler-instructions.md  executor-instructions.md  supervisor-instructions.md
plan/: 00_component_map.md  06_flow_contract.md  ARCHITECTURE.md  DIAGNOSTIC.md  GUIDE.md  IMPLEMENTATION_ORDER.md  NODE_IMPLEMENTATION_ANALYSIS.md  OTHER_PROJECTS.md  README.md  adr_001_execution_tracker.md  adr_001_next_actions.md  index_checklist.md  (+4 more)
(+2079 files in other folders)
