[project]
name = "podyulsyot3001"
version = "0.1"
dependencies = [
    "langgraph>=1.1.0",
    "crawl4ai>=0.8.0",
    "httpx>=0.28.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["**/*"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
